--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "practice",
   "version": "0.1.5",
-  "description": "My wroks for portfolio",
+  "description": "Мои работы, некое портфолио, но не совсем",
   "author": "slpAkkie",
   "license": "MIT"
 }
